# Web_learning

./: .gitignore  README.md  package-lock.json
backend/: .env  pyproject.toml
backend/docs/: injector_guide.md
backend/src/backend/: app.py  test_database.py
backend/src/backend/controllers/: country_info_controller.py  region_info_controller.py  weather_info_controller.py
backend/src/backend/database/: connection.py  models.py
backend/src/backend/di/: container.py
backend/src/backend/examples/: injector_usage.py
backend/src/backend/repositories/: interfaces.py  region_repository.py  weather_repository.py
backend/src/backend/repositories/implementations/: postgresql_region_repository.py  postgresql_weather_repository.py  region_repository.py  weather_repository.py
backend/src/backend/services/implementation/: region_info_service.py  weather_service.py  weather_service_injector.py
backend/src/backend/services/interfaces/: Iregion_info_service.py  Iweather_service.py
backend/src/backend/services/schemas/: region_resp_schema.py  weather_resp_schema.py
database/: README.md  docker-compose.yml  start_database.bat  start_database.sh
database/init_scripts/: 01_init_database.sql
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: region_info_display.tsx  weather_display.tsx
frontend/src/controllers/: region_info_controller.ts  weather_service_controller.ts
frontend/src/pages/: LandingPage.css  LandingPage.tsx  RegionInfoPage.css  RegionInfoPage.tsx  WeatherPage.css  WeatherPage.tsx
(+7 files in other folders)
